--- a/package.json
+++ b/package.json
@@ -13,57 +13,59 @@
   },
   "author": "",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
-    "jquery": "^2.2.1",
-    "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
-    "react-addons-test-utils": "^15.0.2",
-    "browserify": "^13.0.0",
-    "babelify": "^7.2.0",
-    "bower": "^1.6.5",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-if": "^2.0.0",
-    "gulp-less": "^3.0.3",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-uglify": "^1.4.2",
-    "gulp-util": "^3.0.7",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.0"
+    "chai": "3.5.0",
+    "chai-jquery": "2.0.0",
+    "jquery": "2.2.3",
+    "jsdom": "9.1.0",
+    "mocha": "2.4.5",
+    "react-addons-test-utils": "15.0.2",
+    "browserify": "13.0.1",
+    "babelify": "7.3.0",
+    "bower": "1.7.9",
+    "gulp": "3.9.1",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-concat": "2.6.0",
+    "gulp-cssmin": "0.1.7",
+    "gulp-if": "2.0.1",
+    "gulp-less": "3.1.0",
+    "gulp-plumber": "1.1.0",
+    "gulp-sourcemaps": "2.0.0-alpha",
+    "gulp-uglify": "1.5.3",
+    "gulp-util": "3.0.7",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.7.0"
   },
   "dependencies": {
-    "axios": "^0.11.0",
-    "babel-core": "^6.2.1",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-1": "^6.1.18",
-    "babel-register": "^6.7.2",
-    "babel-runtime": "^6.3.19",
-    "body-parser": "^1.15.0",
-    "bootstrap": "^3.3.6",
-    "express": "^4.13.3",
-    "express-stormpath": "^3.0.0",
-    "history": "^1.17.0",
-    "jquery": "^2.2.3",
-    "less": "^2.6.1",
-    "lodash": "^4.11.2",
-    "mongoose": "^4.4.14",
-    "morgan": "^1.6.1",
-    "multer": "^1.1.0",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-dropzone": "^3.4.0",
-    "react-redux": "^4.0.0",
-    "react-router": "^1.0.3",
-    "react-stormpath": "^1.0.0",
-    "redux": "^3.0.4",
-    "redux-form": "^5.2.2",
-    "redux-promise": "^0.5.3",
-    "underscore": "^1.8.3"
+    "axios": "0.11.1",
+    "babel-core": "6.9.0",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-1": "6.5.0",
+    "babel-register": "6.9.0",
+    "babel-runtime": "6.9.0",
+    "body-parser": "1.15.1",
+    "bootstrap": "3.3.6",
+    "cookie-parser": "1.4.1",
+    "express": "4.13.4",
+    "express-stormpath": "3.1.2",
+    "history": "2.1.1",
+    "jquery": "2.2.3",
+    "less": "2.7.1",
+    "lodash": "4.12.0",
+    "mongoose": "4.4.17",
+    "morgan": "1.7.0",
+    "multer": "1.1.0",
+    "react": "15.0.2",
+    "react-cookie": "0.4.6",
+    "react-dom": "15.0.2",
+    "react-dropzone": "3.4.0",
+    "react-redux": "4.4.5",
+    "react-router": "2.4.0",
+    "react-stormpath": "1.2.1",
+    "redux": "3.5.2",
+    "redux-form": "5.2.3",
+    "redux-promise": "0.5.3",
+    "underscore": "1.8.3"
   }
 }
