Added Image Gallery in product view. Using GraphicsMagic to make thumbnail out of uploaded photos

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cookie-parser": "1.4.1",
     "express": "4.13.4",
     "express-stormpath": "3.1.2",
+    "gm": "^1.22.0",
     "history": "2.1.1",
     "jquery": "2.2.3",
     "less": "2.7.1",
@@ -60,6 +61,7 @@
     "react-cookie": "0.4.6",
     "react-dom": "15.0.2",
     "react-dropzone": "3.4.0",
+    "react-image-gallery": "^0.6.1",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-stormpath": "1.2.1",
