--- a/package.json
+++ b/package.json
@@ -13,61 +13,55 @@
   },
   "author": "",
   "devDependencies": {
-    "chai": "3.5.0",
-    "chai-jquery": "2.0.0",
-    "jquery": "2.2.3",
-    "jsdom": "9.1.0",
-    "mocha": "2.4.5",
-    "react-addons-test-utils": "15.0.2",
-    "browserify": "13.0.1",
-    "babelify": "7.3.0",
-    "bower": "1.7.9",
-    "gulp": "3.9.1",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-concat": "2.6.0",
-    "gulp-cssmin": "0.1.7",
-    "gulp-if": "2.0.1",
-    "gulp-less": "3.1.0",
+    "babelify": "8.0.0",
+    "bower": "1.8.2",
+    "browserify": "14.5.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "4.0.0",
+    "gulp-concat": "2.6.1",
+    "gulp-cssmin": "0.2.0",
+    "gulp-if": "2.0.2",
+    "gulp-less": "3.3.2",
     "gulp-plumber": "1.1.0",
-    "gulp-sourcemaps": "2.0.0-alpha",
-    "gulp-uglify": "1.5.3",
-    "gulp-util": "3.0.7",
+    "gulp-sourcemaps": "2.6.1",
+    "gulp-uglify": "3.0.0",
+    "gulp-util": "3.0.8",
+    "jsdom": "11.3.0",
+    "react-addons-test-utils": "15.6.2",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
-    "watchify": "3.7.0"
+    "watchify": "3.9.0"
   },
   "dependencies": {
-    "axios": "0.11.1",
-    "babel-core": "6.9.0",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-1": "6.5.0",
-    "babel-register": "6.9.0",
-    "babel-runtime": "6.9.0",
-    "body-parser": "1.15.1",
-    "bootstrap": "3.3.6",
-    "cookie-parser": "1.4.1",
-    "express": "4.13.4",
-    "express-stormpath": "3.1.2",
-    "gm": "^1.22.0",
-    "history": "2.1.1",
-    "jquery": "2.2.3",
-    "less": "2.7.1",
-    "lodash": "4.12.0",
-    "mongoose": "4.4.17",
-    "morgan": "1.7.0",
-    "multer": "1.1.0",
-    "react": "15.0.2",
-    "react-cookie": "0.4.6",
-    "react-dom": "15.0.2",
-    "react-dropzone": "3.4.0",
-    "react-image-gallery": "^0.6.1",
-    "react-redux": "4.4.5",
-    "react-router": "2.4.0",
-    "react-stormpath": "1.2.1",
-    "redux": "3.5.2",
-    "redux-form": "5.2.3",
-    "redux-promise": "0.5.3",
-    "underscore": "1.8.3"
+    "axios": "^0.17.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "gm": "^1.23.0",
+    "history": "^4.7.2",
+    "less": "^2.7.3",
+    "lodash": "^4.17.4",
+    "mongoose": "^4.13.0",
+    "morgan": "^1.9.0",
+    "multer": "^1.3.0",
+    "react": "^16.0.0",
+    "react-cookie": "^2.1.1",
+    "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.1",
+    "react-image-gallery": "^0.8.4",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-form": "^7.1.2",
+    "redux-promise": "^0.5.3",
+    "underscore": "^1.8.3"
   }
 }
